--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -19480,3 +19480,24 @@ series:
         url: https://www.meetup.com/praguerb/events/291516531/
         dtstart: 2023-03-01 19:00:00+01:00
         dtend: 2023-03-01 22:00:00+01:00
+  - meetupcom:
+      meta_description: Not a Meetup member yet? Log in and find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, March 1 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/291516531/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfyfcfbcb@meetup.com
+        url: https://www.meetup.com/praguerb/events/291516531/
+        dtstart: 2023-03-01 19:00:00+01:00
+        dtend: 2023-03-01 22:00:00+01:00
