--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -26673,14 +26673,14 @@ series:
           • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
 
 
-          https://www.meetup.com/gdgprague/events/xqcsqsyfcgbpb/'
+          https://www.meetup.com/gdgprague/events/292407923/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_xqcsqsyfcgbpb@meetup.com
-        url: https://www.meetup.com/gdgprague/events/xqcsqsyfcgbpb/
+        url: https://www.meetup.com/gdgprague/events/292407923/
         dtstart: 2023-04-11 18:30:00+02:00
         dtend: 2023-04-11 20:30:00+02:00
   - meetupcom:
@@ -29061,6 +29061,30 @@ series:
         dtend: 2023-03-14 20:30:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, March 14 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/291798680/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsyfcfbsb@meetup.com
+        url: https://www.meetup.com/gdgprague/events/291798680/
+        dtstart: 2023-03-14 18:30:00+01:00
+        dtend: 2023-03-14 20:30:00+01:00
+  - meetupcom:
+      meta_description: Not a Meetup member yet? Log in and find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
       url: https://www.meetup.com/login/
       ical:
