--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -44738,3 +44738,27 @@ series:
         url: https://www.meetup.com/strv-meetups/events/291307881/
         dtstart: 2023-02-16 18:00:00+01:00
         dtend: 2023-02-16 22:00:00+01:00
+  - meetupcom:
+      meta_description: Not a Meetup member yet? Log in and find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: (PRAGUE) React Native Meetup
+        description: 'STRV Meetups
+
+          Thursday, February 16 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/529091897107)** After a long time, the STRV Frontend team is organizing a meetup solely focused on React Native. Over ...
+
+
+          https://www.meetup.com/strv-meetups/events/291307881/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291307881@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/291307881/
+        dtstart: 2023-02-16 18:00:00+01:00
+        dtend: 2023-02-16 22:00:00+01:00
