--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -37282,3 +37282,50 @@ series:
         url: https://www.meetup.com/frontendisti/events/289061409/
         dtstart: 2023-03-08 18:00:00+01:00
         dtend: 2023-03-08 20:00:00+01:00
+  - meetupcom:
+      meta_description: Tak a je to tady, další měsíc a opět frontendový nášup na novém místě. Tentokrát se potkáme v prostorech firmy [Betsys](https://www.betsys.com/cz/), které se nacházejí na R
+      og_title: 'Praha: dubnový meetup v Betsys | Frontendisti.cz, Wed, Apr 12, 2023, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/frontendisti/events/292425558/
+      ical:
+        summary: 'Praha: dubnový meetup v Betsys | Frontendisti.cz'
+        description: 'Frontendisti.cz
+
+          Wednesday, April 12 at 6:00 PM
+
+
+          Tak a je to tady, další měsíc a opět frontendový nášup na novém místě. Tentokrát se potkáme v prostorech firmy (https://www.betsys.com/cz/), které se ...
+
+
+          https://www.meetup.com/frontendisti/events/292425558/'
+        location: Karolinská 650/1 (Karolinská 650/1, Praha 8-Karlín, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_292425558@meetup.com
+        url: https://www.meetup.com/frontendisti/events/292425558/
+        dtstart: 2023-04-12 18:00:00+02:00
+        dtend: 2023-04-12 21:00:00+02:00
+  - meetupcom:
+      meta_description: Not a Meetup member yet? Log in and find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Brno: březnový meetup | Frontendisti.cz'
+        description: 'Frontendisti.cz
+
+          Wednesday, March 8 at 6:00 PM
+
+
+          Brněnský meetup komunity **Frontendisti** je tady. Těšit se můžeme na tři přednášky a už tradičně vymezený prostor na lightning talks. Akci nestreamuj...\n
+
+          https://www.meetup.com/frontendisti/events/289061409/'
+        location: Kentico Software (Nové sady 25, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289061409@meetup.com
+        url: https://www.meetup.com/frontendisti/events/289061409/
+        dtstart: 2023-03-08 18:00:00+01:00
+        dtend: 2023-03-08 20:00:00+01:00
